Add maintenance mode UI to Blueprint
Summary:
* When an member of the designated admin team is logged in, a maintenance
  mode toggle will appear on the front page.  Clicking it brings up a form
  asking for the reason for the change.
* When maintenance mode is on, all pages will appear as if the user is not
  logged in, except for the line at the top "Logged in as <user>" and a banner
  explaining that maintenance mode is on and changes are impossible.
* Unrelated: when Blueprint queries GitHub for organization and team
  membership, it now properly query-escapes the names of the organization
  or team.

Test Plan:
In local testing with dummy auth (the unknown user is now designated an
admin), verified that turning maintenance mode on/off works, but only when a
reason is specified; and that when maintenance mode is on, buttons that allow
modifying the database do not appear.  Also verified that logging out and in
again while in maintenance mode does not break anything.

Will also test locally with real auth and run the integration test.

In production, will manually verify that navigating Blueprint still works
and will turn on maintenance mode briefly to verify it as well (will let the
Science team know that this is happening).

Reviewers: mperrone

Reviewed By: mperrone

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D4908

--- a/static/template/schema/create.html
+++ b/static/template/schema/create.html
@@ -11,9 +11,9 @@
           <th>Column Type</th>
           <th class="text-center">Column Size</th>
           <th class="text-center">Mapping Column</th>
-          <th class="text-center" ng-if="loginName">Distribution Key</th>
+          <th class="text-center" ng-if="isEditable">Distribution Key</th>
           <th class="text-center">Occurrence Rate</th>
-          <th ng-if="loginName">&nbsp;</th>
+          <th ng-if="isEditable">&nbsp;</th>
         </tr>
       </thead>
       <tbody>
@@ -21,33 +21,33 @@
           <td><input type="text"
                      value="{{p.InboundName}}"
                      ng-model="p.InboundName"
-                     ng-disabled="!loginName"
+                     ng-disabled="!isEditable"
                      required/></td>
           <td><input type="text"
                      value="{{p.OutboundName}}"
                      ng-model="p.OutboundName"
-                     ng-disabled="!loginName"
+                     ng-disabled="!isEditable"
                      required/></td>
           <td>
             <select ng-options="type for type in types"
-                    ng-disabled="!loginName"
+                    ng-disabled="!isEditable"
                     ng-model="p.Transformer"/>
           </td>
           <td class="text-center">
             <input ng-if="p.Transformer == 'varchar'"
                    value="{{p.size}}"
                    ng-model="p.size"
-                   ng-disabled="!loginName"
+                   ng-disabled="!isEditable"
                    required/>
           </td>
           <td class="text-center">
             <select ng-if="usingMappingTransformer(p)"
                     ng-options="name as name for name in validInboundNames()"
                     ng-model="p.mappingColumn"
-                    ng-disabled="!loginName"
+                    ng-disabled="!isEditable"
                     required/>
           </td>
-          <td class="text-center" ng-if="loginName">
+          <td class="text-center" ng-if="isEditable">
             <input type="radio"
                    ng-model="event.distkey"
                    value="{{p.OutboundName}}"
@@ -56,7 +56,7 @@
           <td class="text-center">
             {{p.OccurrenceProbability | number : 4}}
           </td>
-          <td ng-if="p.InboundName !== 'time' && loginName">
+          <td ng-if="p.InboundName !== 'time' && isEditable">
             <button ng-click="dropColumnFromSchema($index)"
                     type="button"
                     class="btn btn-warning">
@@ -66,7 +66,7 @@
         </tr>
       </tbody>
       <tfoot>
-        <tr ng-if="loginName">
+        <tr ng-if="isEditable">
           <td>
             <input type="text"
                    id="newInboundName"
@@ -103,7 +103,7 @@
                     class="btn btn-primary">Add!</button>
           </td>
         </tr>
-        <tr ng-if="loginName">
+        <tr ng-if="isEditable">
           <td colspan="7"></td>
           <td class="text-center">
             <input type="hidden"
