Add link on schema pages to column transformation docs
Test Plan: Ran locally. Will test links in production.

Reviewers: ojcm

Reviewed By: ojcm

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D5177

--- a/static/template/schema/create.html
+++ b/static/template/schema/create.html
@@ -8,7 +8,7 @@
         <tr>
           <th>Inbound</th>
           <th>Outbound</th>
-          <th>Column Type</th>
+          <th>Column Type <a href="https://git-aws.internal.justin.tv/twitch/docs/blob/master/scieng/api.md#transformations" target="_blank" rel="noopener noreferrer"><i class="fa fa-question-circle"></i></a></th>
           <th class="text-center">Column Size</th>
           <th class="text-center">Mapping Column</th>
           <th class="text-center" ng-if="isEditable">Distribution Key</th>
