--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -46,7 +46,7 @@
     <tr>
       <th>Inbound</th>
       <th>Outbound</th>
-      <th>Column Type</th>
+      <th>Column Type <a href="https://git-aws.internal.justin.tv/twitch/docs/blob/master/scieng/api.md#transformations" target="_blank" rel="noopener noreferrer"><i class="fa fa-question-circle"></i></a></th>
       <th class="text-center">Column Options</th>
       <th class="text-center">Mapping Column</th>
       <th ng-if="isEditable">&nbsp;</th>
