--- a/static/template/kinesisconfig/list.html
+++ b/static/template/kinesisconfig/list.html
@@ -26,10 +26,10 @@
 </div>
 <div ng-repeat="kinesisconfig in kinesisconfigs |
                 filter:search |
-                orderBy:'StreamName'">
+                orderBy:'SpadeConfig.StreamName'">
 
   <h3 style="margin-top: 35px">
-    <a href="#/kinesisconfig/{{::kinesisconfig.AWSAccount}}/{{::kinesisconfig.StreamType}}/{{::kinesisconfig.StreamName}}">{{::kinesisconfig.StreamName}}</a>
+    <a href="#/kinesisconfig/{{::kinesisconfig.AWSAccount}}/{{::kinesisconfig.SpadeConfig.StreamType}}/{{::kinesisconfig.SpadeConfig.StreamName}}">{{::kinesisconfig.SpadeConfig.StreamName}}</a>
     <span class="pull-right" ng-if="search.length > 1"><small>
         <span ng-if="kinesisconfig.Version == 0">Created {{::kinesisconfig.LastEditedAt | date:'yyyy-MM-dd HH:mm:ss Z'}}</span>
         <span ng-if="kinesisconfig.Version != 0">Last updated {{::kinesisconfig.LastEditedAt | date:'yyyy-MM-dd HH:mm:ss Z'}} to version {{::kinesisconfig.Version}}</span>
@@ -48,7 +48,7 @@
     </thead>
     <tbody>
       <tr>
-        <td>{{::kinesisconfig.StreamType}}</td>
+        <td>{{::kinesisconfig.SpadeConfig.StreamType}}</td>
         <td>{{::kinesisconfig.Team}}</td>
         <td>{{::kinesisconfig.AWSAccount}}</td>
         <td>{{::kinesisconfig.ConsumingLibrary}}</td>
