--- a/static/template/kinesisconfig/list.html
+++ b/static/template/kinesisconfig/list.html
@@ -1,5 +1,5 @@
 <h1>Published Kinesis Configurations</h1>
-<a href="#/kinesisconfig" ng-if="isEditable">
+<a href="#/kinesisconfig" ng-if="isAdmin">
   <button type="button" class="btn btn-success">Create</button>
 </a>
 <div class="row">
