Blueprint comments front-end
Summary: Collapsable comments, editor, preview mode, markdown support

Test Plan:
**Modes for Comment**
  - Read Mode: Edit button only if logged in, no buttons otherwise
  - Edit Mode: Only shows when logged in, 3 buttons - preview, update, cancel
  - Preview Mode: Only shows when logged in, 3 buttons - preview, update, cancel. Panel header and border are blue

**Logged Out**
  - Comments are read only
  - No preview/edit/cancel buttons

**Collapsable**
Test collapsing and expanding when
  - Logged out
  - Logged in, read mode
  - Logged in, edit mode
  - Logged in, preview mode

**Update**
  - In Edit mode, clicking Update leads to Read mode, new comment is shown
  - In Preview mode, clicking Update leads to Read mode, new comment is shown the same as the preview
  - Preview
  - In Edit mode, clicking Preview shows a rendering of the markdown that was being edited, panel header and border are blue
  - In Preview mode, clicking Preview takes you back to edit mode with the correct comment

**Cancel**
  - In Edit mode, clicking Cancel leads to Read mode, losing changes that were made
  - In Preview mode, clicking Cancel leads to Read mode, losing changes that were made

Reviewers: mperrone, clgroft

Reviewed By: clgroft

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D5307

--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -39,8 +39,45 @@
 </div>
 </form>
 
+<div class="container col-md-12 github" style="padding-left: 0px; padding-right: 0px;">
+  <div class="panel-group" style="padding: 15px 0px">
+    <div class="panel" ng-class="isEventCommentInPreviewMode ? 'panel-info' : 'panel-default'">
+      <div class="panel-heading" ng-click="isCommentCollapsed = !isCommentCollapsed" style="cursor:pointer">
+        <div class="panel-title" style="font-size: 24px;">
+          <span class="glyphicon glyphicon-plus" ng-show="isCommentCollapsed"></span>
+          <span class="glyphicon glyphicon-minus" ng-show="!isCommentCollapsed"></span>
+          {{isEventCommentInPreviewMode ? 'Notes (Preview)' : 'Notes'}}
+        </div>
+      </div>
+      <div id="collapseOne" class="panel-collapse collapse in">
+        <div class="panel-body" ng-show="!isCommentCollapsed">
+          <p markdown-to-html="displayedComment" ng-if="(!isEditable || !isEventCommentEditable) && !isEventCommentInPreviewMode"></p>
+          <p markdown-to-html="previewComment" ng-if="isEditable && isEventCommentInPreviewMode"></p>
+          <div class="row col-md-12" style="padding-bottom: 15px;">
+            <textarea ng-model="eventComment.Comment" ng-if="isEditable && isEventCommentEditable && !isEventCommentInPreviewMode" rows="25" cols="110"></textarea>
+          </div>
+          <div style="padding-right: 0px;">
+            <div ng-if="isEditable && !isEventCommentEditable">
+              <button class="btn btn-primary pull-right" ng-click="editEventComment()">Edit Comment</button>
+            </div>
+            <div ng-if="isEditable && isEventCommentEditable">
+              <button class="btn btn-danger pull-right" ng-click="cancelEditEventComment()">Cancel</button>
+            </div>
+            <div ng-if="isEditable && isEventCommentEditable">
+              <button class="btn btn-success pull-right" ng-click="updateEventComment()" style="margin-right:15px;">Update Comment</button>
+            </div>
+            <div ng-if="isEditable && isEventCommentEditable">
+              <button class="btn btn-info pull-right" ng-click="togglePreviewEventComment()" style="margin-right:15px;">Toggle Preview</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <form ng-show="!loading && (!showDropTable || !dropMessage)" name="updateSchemaForm" ng-submit="updateSchema()">
-<span ng-show="isEditable">Note: any changes will be queued until offpeak hours - Redshift data for this table will be delayed from when said change is queued until it is executed offpeak.</span>
+<span ng-show="isEditable">Note: any changes to the schema will be queued until offpeak hours - Redshift data for this table will be delayed from when said change is queued until it is executed offpeak.</span>
 <table class="table table-hover">
   <thead>
     <tr>
