--- a/static/template/schema/list.html
+++ b/static/template/schema/list.html
@@ -1,5 +1,5 @@
 <h1>Published Schemas</h1>
-<a href="#/schema" ng-if="isEditable">
+<a href="#/schema" ng-if="globalIsEditable">
   <button type="button" class="btn btn-success">Create</button>
 </a>
 <button ng-show="isAdmin" ng-click="showMaintenance = !showMaintenance" type="button" class="btn btn-danger">
